// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with a counter 1`] = `
<DocumentFragment>
  <div
    class="center"
  >
    <div
      align="center"
    >
      <h1
        class="p3"
      >
        Counter App
      </h1>
      <h2
        class="p1"
        data-testid="counter"
      >
        Count : 0
      </h2>
      <button
        class="button button1"
      >
        Increment
      </button>
      <button
        class="button button2"
      >
        Decrement
      </button>
      <br />
      <br />
      <div
        class="p4"
      >
        <div
          class="pad"
        >
          <label
            class="p2"
          >
            Custom Input: 
          </label>
          <input
            type="number"
            value="1"
          />
        </div>
      </div>
      <button
        class="button buttonReset"
      >
        Reset
      </button>
    </div>
    <div />
  </div>
</DocumentFragment>
`;

exports[`renders correctly with a counter 1 1`] = `
<DocumentFragment>
  <div
    class="center"
  >
    <div
      align="center"
    >
      <h1
        class="p3"
      >
        Counter App
      </h1>
      <h2
        class="p1"
        data-testid="counter"
      >
        Count : 0
      </h2>
      <button
        class="button button1"
      >
        Increment
      </button>
      <button
        class="button button2"
      >
        Decrement
      </button>
      <br />
      <br />
      <div
        class="p4"
      >
        <div
          class="pad"
        >
          <label
            class="p2"
          >
            Custom Input: 
          </label>
          <input
            name="custom"
            type="number"
            value="1"
          />
        </div>
      </div>
      <button
        class="button buttonReset"
      >
        Reset
      </button>
    </div>
    <div />
  </div>
</DocumentFragment>
`;
